nav(fix): recreate grid if no logo
* was using site_name, but it could be too big for the navbar

--- a/kami/static/css/kami.css
+++ b/kami/static/css/kami.css
@@ -65,6 +65,14 @@ body {
     column-gap: 1rem;
 }
 
+.nav.nav__logo--hidden {
+    grid-template-columns: auto auto;
+}
+
+.nav.nav__logo--hidden > .nav__logo {
+    display: none;
+}
+
 .nav__left {
     display: flex;
     align-items: center;
